update binding to reset font & transparency

--- a/emacs.org
+++ b/emacs.org
@@ -941,7 +941,7 @@ argument makes the windows rotate backwards."
 (define-key ctl-x-4-map (kbd "2") 'toggle-window-split)
 (define-key ctl-x-4-map (kbd "3") 'toggle-window-split)
 (define-key ctl-x-4-map (kbd "1") 'rotate-windows)
-(define-key ctl-x-4-map (kbd "R") 'font-size-transparency-alpha-default)
+(define-key ctl-x-4-map (kbd "g") 'font-size-transparency-alpha-default)
 
 (define-key ctl-x-4-map (kbd "<up>") 'font-size-increase)
 (define-key ctl-x-4-map (kbd "<down>") 'font-size-decrease)
