--- a/emacs.org
+++ b/emacs.org
@@ -208,12 +208,16 @@ These are non-interactive library functions useful in other parts of this config
 (defun jw--git-config-get (key)
   (s-presence (s-trim (shell-command-to-string (format "git config --get %s 2>/dev/null" key)))))
 
-(defun jw--iso-current-time-string ()
-  (concat (format-time-string "%Y-%m-%dT%T")
-          ((lambda (x) (concat (substring x 0 3) ":" (substring x 3 5))) (format-time-string "%z"))))
+(defun jw--iso-current-time-string (&optional utc)
+  (if utc
+      (format-time-string "%Y-%m-%dT%TZ" nil t)
+    (concat (format-time-string "%Y-%m-%dT%T")
+            ((lambda (x) (concat (substring x 0 3) ":" (substring x 3 5))) (format-time-string "%z")))))
 
-(defun jw--current-date-string ()
-  (format-time-string "%Y-%m-%d"))
+(defun jw--current-date-string (&optional utc)
+  (if utc
+      (format-time-string "%Y-%m-%d" nil t)
+    (format-time-string "%Y-%m-%d")))
 
 (defun jw--symbol-name (symbol-or-string)
   (if (symbolp symbol-or-string) (symbol-name symbol-or-string) symbol-or-string))
@@ -587,23 +591,22 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 With single prefix arg (C-u M-x date), display calendar around current date.
 With extra prefix arg (C-u C-u M-x date), prompt for year & month for calendar."
   (interactive "P")
-  (when arg
-    (pcase (prefix-numeric-value arg)
-      (16 (calendar arg))
-      (_ (calendar))))
-  (message (current-time-string)))
+  (pcase (prefix-numeric-value arg)
+    (16 (calendar arg))
+    (4 (calendar))
+    (_ (message (current-time-string)))))
 
-(defun iso-date ()
-  (interactive)
-  (message (jw--iso-current-time-string)))
+(defun iso-datetime (utc)
+  (interactive "P")
+  (message (jw--iso-current-time-string utc)))
 
-(defun insert-iso-date ()
-  (interactive)
-  (insert (jw--iso-current-time-string)))
+(defun insert-iso-datetime (utc)
+  (interactive "P")
+  (insert (jw--iso-current-time-string utc)))
 
-(defun insert-date ()
-  (interactive)
-  (insert (jw--current-date-string)))
+(defun insert-date (utc)
+  (interactive "P")
+  (insert (jw--current-date-string utc)))
 
 (defun weather (&optional arg)
   (interactive "P")
