--- a/emacs.org
+++ b/emacs.org
@@ -919,6 +919,7 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-<return>") 'open-line-next)
 (global-set-key (kbd "C-j") 'newline-and-open-line-previous)
 (global-set-key (kbd "C-<tab>") 'indent-region-or-buffer)
+(global-set-key (kbd "C-M-;") 'just-one-space)
 (global-set-key (kbd "M-;") 'comment-dwim-dwim)
 (global-set-key (kbd "C-=") 'er/expand-region)
 (global-set-key (kbd "C-+") 'er/contract-region)
