fix todo backup script to not always kill the buffer

--- a/emacs.org
+++ b/emacs.org
@@ -242,17 +242,21 @@ These are non-interactive library functions useful in other parts of this config
                                (funcall ,fn proc))))))
 
 (setq jw--run-cmd-shell "bash")
+(setq jw--run-cmd-script-dir "/tmp/emacs-jw-run-cmd/")
 
-(cl-defun jw--run-cmd (command &key process-name before-process-creation after-process-creation after-process-finish delete-tmp-script tail-output)
-  "A wrapper around `make-comint-in-buffer'.
+(cl-defun jw--run-cmd (command &key process-name before-process-creation after-process-creation after-process-finish tail-output delete-tmp-script)
+  "An opinionated wrapper around `make-comint-in-buffer'.
 
 For commands that have already finished, this will clean up the process buffer and re-run the command.
 For long running processes, this will always toggle back and forth between the process buffer and the other buffer as long as the process is alive.
 
-`process-name' can be used to override the automatic naming of the process & buffer (from the `command').
-`before-process-creation' is an optional zero-arg function that is run before the process is started.
-`after-process-creation' is an optional one-arg function (providing the process an arg) that is run after the process is started.
-`after-process-finish' is an optional one-arg function (providing the process as an arg) that is run after the process finishes."
+`:process-name' can be used to override the automatic naming of the process & buffer (from the `command').
+`:before-process-creation' is an optional zero-arg function that is run before the process is started.
+`:after-process-creation' is an optional one-arg function (providing the process an arg) that is run after the process is started.
+`:after-process-finish' is an optional one-arg function (providing the process as an arg) that is run after the process finishes.
+`:tail-output' will direct the cursor to tail the output in the emacs buffer, instead of leaving it at the top of the buffer.
+`:delete-tmp-script' will remove the underlying shell script, instead of leaving it in the tmp directory.
+"
   (require 'comint)
   (let* ((prepared-cmd (string-trim command))
          (cmd-process-name (or process-name (s-collapse-whitespace (s-left 100 prepared-cmd))))
@@ -261,9 +265,8 @@ For long running processes, this will always toggle back and forth between the p
         (message "Empty command! Doing nothing.")
       (if (process-live-p (get-process cmd-process-name))
           (if (string= (buffer-name) cmd-buffer-name) (switch-to-buffer (other-buffer)) (switch-to-buffer cmd-buffer-name))
-        (let* ((tmp-script-dir "/tmp/emacs-jw-run-cmd/")
-               (tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
-               (tmp-script-abs-filename (concat tmp-script-dir tmp-script-rel-filename))
+        (let* ((tmp-script-rel-filename (replace-regexp-in-string "[^a-zA-Z0-9]+" "-" cmd-process-name))
+               (tmp-script-abs-filename (concat jw--run-cmd-script-dir tmp-script-rel-filename))
                (tmp-script-sh-executable (or (ignore-errors (executable-find jw--run-cmd-shell))
                                              (executable-find (jw--login-shell))))
                (tmp-script-contents (format "#!%s\n\ncd %s\n\n%s\n\necho" tmp-script-sh-executable (jw--pwd) prepared-cmd)))
@@ -1260,12 +1263,12 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
     (find-file jw-org-todo-file)
     (cd (getenv "HOME"))))
 
-(defun jw-todo-backup ()
-  (interactive)
+(defun jw-todo-backup (arg)
+  (interactive "P")
   (jw--run-cmd "todo-backup"
-               :after-process-finish (lambda (proc)
-                                       (kill-buffer (process-buffer proc))
-                                       (message "Command jw-todo-backup finished"))))
+               :after-process-finish `(lambda (proc)
+                                        (when ,(null arg) (kill-buffer (process-buffer proc)))
+                                        (message "Command jw-todo-backup finished"))))
 
 (setq jw-org-agenda-pre-hook nil)
 
