--- a/emacs.org
+++ b/emacs.org
@@ -53,8 +53,7 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
             (defalias 'describe-variable 'helpful-variable)
             (defalias 'describe-symbol 'helpful-symbol)))
 
-(use-package transient :pin melpa-stable)
-(use-package magit :pin melpa-stable)
+(use-package magit) ;; brings in transient
 
 (use-package browse-at-remote)
 
@@ -1148,11 +1147,8 @@ terminal additions
 ;; also, use-package magit tries to set this before jw-env-set is called, pointing it to a different git.
 (setq magit-git-executable (executable-find "git"))
 
-;; todojoe -- this acts sorta weird, it doesn't exit the popup when starting the process
-;; and for some reason, the universal arg was set to C-p, breaking C-p navigation -- fixed on master
+;; todojoe -- this doesn't work
 ;; (setq transient-enable-popup-navigation t)
-;; (define-key transient-map (kbd "C-p") nil)
-;; (define-key transient-map (kbd "C-u") 'universal-argument)
 
 (setq transient-display-buffer-action '(display-buffer-below-selected))
 
