--- a/emacs.org
+++ b/emacs.org
@@ -1152,9 +1152,7 @@ terminal additions
 ;; also, use-package magit tries to set this before jw-env-set is called, pointing it to a different git.
 (setq magit-git-executable (executable-find "git"))
 
-;; todojoe -- this doesn't work
-;; (setq transient-enable-popup-navigation t)
-
+(setq transient-enable-popup-navigation t)
 (setq transient-display-buffer-action '(display-buffer-below-selected))
 
 (setq gist-view-gist t)
