dired rename function

--- a/emacs.org
+++ b/emacs.org
@@ -867,7 +867,7 @@ argument makes the windows rotate backwards."
   (when arg (dired-tree-up 0))
   (dired-do-kill-lines 1 ""))
 
-(defun dired-do-kill-tree-dwim ()
+(defun dired-do-kill-subdir-dwim ()
   (interactive)
   (dired-do-kill-line-dwim 1))
 #+END_SRC
@@ -960,7 +960,7 @@ argument makes the windows rotate backwards."
 (define-key dired-mode-map (kbd "<tab>") 'dired-hide-subdir-dwim)
 (define-key dired-mode-map (kbd "$") 'dired-hide-subdir-dwim)
 (define-key dired-mode-map (kbd "k") 'dired-do-kill-line-dwim)
-(define-key dired-mode-map (kbd "K") 'dired-do-kill-tree-dwim)
+(define-key dired-mode-map (kbd "K") 'dired-do-kill-subdir-dwim)
 (define-key help-map (kbd "M-n") 'helpful-at-point)
 (define-key help-map (kbd "H") 'view-hello-file)
 (define-key help-map (kbd "h") 'cheat-sh)
